--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "simple-json-db": "^2.0.0"
   }
