--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ajax": "^0.0.4",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
